# CampaignMaster

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  rsbuild.config.ts  tsconfig.json  vitest.config.ts
.github/: BRANCH_PROTECTION.md
.github/workflows/: lint.yml  release.yml  test.yml  tests.yml
campaign_master/: __main__.py  util.py
campaign_master/ai/: __init__.py  protocol.py  refinement.py  service.py
campaign_master/ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
campaign_master/content/: __init__.py  api.py  database.py  db.py  executing.py  factory.py  ids.py  locking.py  models.py  planning.py  settings.py
campaign_master/gui/: app.py  main_window.py  old_app.py
campaign_master/gui/dialogs/: __init__.py  agent_settings.py
campaign_master/gui/themes/: __init__.py  colors.py  dark_theme.py  style_builder.py
campaign_master/gui/themes/styles/: global.qss
campaign_master/gui/widgets/: ai_widgets.py  executing.py  planning.py
campaign_master/web/: ai_api.py  api.py  app.py  auth.py  build.py  settings.py  storage.py  util.py
campaign_master/web/react/: App.tsx  auth.ts  env.d.ts  index.tsx  query.tsx  routeTree.gen.ts  schemas.tsx  styles.css
campaign_master/web/react/__tests__/: CampaignCard.test.tsx  CampaignPlansList.test.tsx  Nav.test.tsx  fields.test.tsx  query.test.tsx  schemas.test.ts  schemas.test.tsx  sequential-ids.test.tsx  test-utils.tsx
campaign_master/web/react/__tests__/fieldgroups/: ArcGroup.test.tsx  CampaignPlanGroup.test.tsx  CharacterGroup.test.tsx  ItemGroup.test.tsx  LocationGroup.test.tsx  ObjectiveGroup.test.tsx  PointGroup.test.tsx  RuleGroup.test.tsx  SegmentGroup.test.tsx
campaign_master/web/react/__tests__/routes/: CampaignPlanEdit.test.tsx  ExecuteDetail.test.tsx  ExecuteList.test.tsx
campaign_master/web/react/components/: Campaign.tsx  ChoicePage.tsx  Form.tsx  Forms.tsx  ObjectForm.tsx  TextField.tsx
campaign_master/web/react/hooks/: form-context.tsx
campaign_master/web/react/routes/: __root.tsx  about.lazy.tsx  index.tsx  login.tsx  profile.tsx
packaging/: CampaignMaster.spec  build.py  bump_version.py  entry_gui.py  entry_web.py
packaging/hooks/: hook-campaign_master.py
src/: App.tsx  index.tsx
src/components/: Button.tsx
test/: conftest.py  test_content_api.py  test_gui.py  test_gui_executing.py  test_pyinstaller_build.py
test/test_web_api/: __init__.py  conftest.py  test_crud_base.py  test_error_handling.py  test_relationships.py  test_sequential_ids.py
(+84 files in other folders)
