[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "campaign_master"
version = "0.0.1"
authors = [
    "Chris De Jesus <christopher2653@gmail.com>"
]
description = "A campaign management tool for tabletop RPGs."

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tqdm = {version = "^4.67.1"}
PySide6 = {version = "~=6.8.1.1"}
PySide6-Essentials = {version = "~=6.8.1.1"}
PySide6-Addons = {version = "~=6.8.1.1"}
fastapi = {extras = ["all"], version = "^0.125.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
aiosqlite = "^0.22.0"
anthropic = "^0.42.0"
openai = "^1.59.0"
httpx = "^0.28.0"
bcrypt = "^5.0.0"


[tool.poetry.group.formatting.dependencies]
black="^24.10.0"
isort="^5.13.2"



[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
